{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 55,
  "lineage": "bb1629b8-7cae-248f-96f1-db2d73b2f2d1",
  "resources": [
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0009b1ad3adf0b26f",
            "association_id": "eipassoc-0576fa1d563a128ce",
            "domain": "vpc",
            "id": "eipalloc-0009b1ad3adf0b26f",
            "network_border_group": "us-west-2",
            "network_interface": "eni-003e04b6b3eec4901",
            "private_dns": "ip-172-34-0-242.us-west-2.compute.internal",
            "private_ip": "172.34.0.242",
            "public_dns": "ec2-54-149-247-164.us-west-2.compute.amazonaws.com",
            "public_ip": "54.149.247.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mwaa-MyEnvironment-eip-0"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-eip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04204810f63493960",
            "association_id": "eipassoc-06bf71c2abee4d775",
            "domain": "vpc",
            "id": "eipalloc-04204810f63493960",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c0a131a8322d93c9",
            "private_dns": "ip-172-35-0-189.us-west-2.compute.internal",
            "private_ip": "172.35.0.189",
            "public_dns": "ec2-52-35-6-55.us-west-2.compute.amazonaws.com",
            "public_ip": "52.35.6.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mwaa-MyEnvironment-eip-1"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-eip-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0009b1ad3adf0b26f",
            "connectivity_type": "public",
            "id": "nat-0033332a970a38222",
            "network_interface_id": "eni-003e04b6b3eec4901",
            "private_ip": "172.34.0.242",
            "public_ip": "54.149.247.164",
            "subnet_id": "subnet-02fe7e3c40aa0f477",
            "tags": {
              "Name": "mwaa-MyEnvironment-nat-gateway-0"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-nat-gateway-0"
            }
          },
          "dependencies": [
            "module.airflow.aws_eip.this",
            "module.airflow.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04204810f63493960",
            "connectivity_type": "public",
            "id": "nat-09e6421095251fe29",
            "network_interface_id": "eni-0c0a131a8322d93c9",
            "private_ip": "172.35.0.189",
            "public_ip": "52.35.6.55",
            "subnet_id": "subnet-021a6ae787280ac9d",
            "tags": {
              "Name": "mwaa-MyEnvironment-nat-gateway-1"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.airflow.aws_eip.this",
            "module.airflow.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:729482454746:route-table/rtb-01598499c441efa75",
            "id": "rtb-01598499c441efa75",
            "owner_id": "729482454746",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0033332a970a38222",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mwaa-MyEnvironment-private-routes-a"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-private-routes-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad04c53bba2df52c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.airflow.aws_eip.this",
            "module.airflow.aws_nat_gateway.this",
            "module.airflow.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:729482454746:route-table/rtb-06ea1d3d67b52221c",
            "id": "rtb-06ea1d3d67b52221c",
            "owner_id": "729482454746",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09e6421095251fe29",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mwaa-MyEnvironment-private-routes-a"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-private-routes-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad04c53bba2df52c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.airflow.aws_eip.this",
            "module.airflow.aws_nat_gateway.this",
            "module.airflow.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:729482454746:route-table/rtb-075b2f7c453e66f9a",
            "id": "rtb-075b2f7c453e66f9a",
            "owner_id": "729482454746",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d91f3ea3f24c415e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mwaa-MyEnvironment-public-routes"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-public-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad04c53bba2df52c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076cca07495d0e435",
            "route_table_id": "rtb-01598499c441efa75",
            "subnet_id": "subnet-03fe1821e0ba09227"
          },
          "dependencies": [
            "module.airflow.aws_eip.this",
            "module.airflow.aws_nat_gateway.this",
            "module.airflow.aws_route_table.private",
            "module.airflow.aws_subnet.private",
            "module.airflow.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052a9526c505a8a71",
            "route_table_id": "rtb-06ea1d3d67b52221c",
            "subnet_id": "subnet-002c8f204abf046e6"
          },
          "dependencies": [
            "module.airflow.aws_eip.this",
            "module.airflow.aws_nat_gateway.this",
            "module.airflow.aws_route_table.private",
            "module.airflow.aws_subnet.private",
            "module.airflow.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4bacd65f168907b",
            "route_table_id": "rtb-075b2f7c453e66f9a",
            "subnet_id": "subnet-02fe7e3c40aa0f477"
          },
          "dependencies": [
            "module.airflow.aws_route_table.public",
            "module.airflow.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f010de9bb1a9a121",
            "route_table_id": "rtb-075b2f7c453e66f9a",
            "subnet_id": "subnet-021a6ae787280ac9d"
          },
          "dependencies": [
            "module.airflow.aws_route_table.public",
            "module.airflow.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:729482454746:security-group/sg-08de97be4038d68bc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08de97be4038d68bc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "mwaa-MyEnvironment-no-ingress-sg",
            "name_prefix": "",
            "owner_id": "729482454746",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mwaa-MyEnvironment-no-ingress-sg"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-no-ingress-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad04c53bba2df52c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:729482454746:subnet/subnet-03fe1821e0ba09227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.32.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fe1821e0ba09227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729482454746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mwaa-MyEnvironment-private-subnet-0"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-private-subnet-0"
            },
            "vpc_id": "vpc-0ad04c53bba2df52c"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:729482454746:subnet/subnet-002c8f204abf046e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.33.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002c8f204abf046e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729482454746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mwaa-MyEnvironment-private-subnet-1"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-private-subnet-1"
            },
            "vpc_id": "vpc-0ad04c53bba2df52c"
          }
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:729482454746:subnet/subnet-02fe7e3c40aa0f477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.34.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fe7e3c40aa0f477",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729482454746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mwaa-MyEnvironment-public-subnet-0"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-public-subnet-0"
            },
            "vpc_id": "vpc-0ad04c53bba2df52c"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:729482454746:subnet/subnet-021a6ae787280ac9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.35.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021a6ae787280ac9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729482454746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mwaa-MyEnvironment-public-subnet-1"
            },
            "tags_all": {
              "Name": "mwaa-MyEnvironment-public-subnet-1"
            },
            "vpc_id": "vpc-0ad04c53bba2df52c"
          }
        }
      ]
    }
  ]
}